# stfaus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  diesel.toml  input.css  package.json  svelte.config.js  vite.config.js
assets/: tailwind.css
db/: stfaus.db
llm/: Cargo.toml
llm/src/: lib.rs  main.rs
llm/src/hub/: engine.rs  mod.rs  spotify.rs
llm/src/models/: mod.rs
migrations/2025-02-26-191539_create_tracks/: up.sql
migrations/2025-02-26-203939_create_app_data/: down.sql  up.sql
server/: Cargo.toml
server/src/: main.rs  prelude.rs
server/src/hub/: apple_music.rs  engine.rs  spotify.rs
server/src/libs/: db.rs  handlers.rs  mod.rs  schema.rs
server/src/models/: mod.rs
server/src/utils/: mod.rs
src/: app.css  app.html  main.rs  prelude.rs  site_router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  play.rs  rustfmt.toml
src-tauri/src/hub/: engine.rs  spotify.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: generated_playlist.rs  layout.rs  llm_chatbox.rs  tabs.rs
src/hub/: apple_music.rs  engine.rs  spotify.rs
src/lib/components/: generated_playlist.svelte  llm_chatbox.svelte  media_control.svelte  saved_playlist.svelte  tabs.svelte
src/libs/: db.rs  llm_serverfns.rs  mod.rs  schema.rs
src/models/: mod.rs
src/pages/: home.rs  settings.rs
src/routes/: +page.svelte
ui/: Cargo.toml  Dioxus.toml  README.md  package.json  rustfmt.toml
ui/assets/: main.css  style.scss  tailwind.css
ui/src/: error.rs  main.rs  prelude.rs
ui/src/components/: generated_playlist.rs  llm_chatbox.rs  media_control.rs  mod.rs  tabs.rs
ui/src/models/: mod.rs
ui/src/pages/: home.rs  settings.rs
ui/src/services/: mod.rs
