[package]
name = "stfaus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stfaus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = { version = "0.15.7"}
dotenvy_macro = "0.15.7"
rig-core = "0.8.0"
rspotify = "0.14.0"
schemars = "0.8.21"
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
rand = "0.9.0"

[[bin]]
name = "tauri-main"
path = "src/main.rs"

[[bin]]
name = "play"
path = "src/play.rs"

