[package]
name = "st-faus"
version = "0.1.0"
authors = ["saent-x <torsxperience@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "=0.7.0-alpha.1", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rig-core = "0.10.0"
rspotify = {version = "0.14.0", features = ["cli"]}
schemars = "0.8.21"
tokio = { version = "1.43.0", features = ["full"], optional = true }
async-trait = "0.1.86"
rand = "0.9.0"
diesel = {version = "2.2.7", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"]}
rodio = "0.20.1"
strum = "0.27.1"
strum_macros = "0.27.1"
axum = {version="0.8.4", optional = true}

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum", "dep:tokio"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
