[package]
name = "st-faus"
version = "0.1.0"
authors = ["saent-x <torsxperience@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "=0.7.0-alpha.1", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["time"]}
anyhow = "1.0.98"
reqwest = {version = "0.12.20", features = ["json"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
